--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/pyodide/v0.25.0/full/pyodide.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-yaml@4.1.0/dist/js-yaml.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
@@ -36,6 +37,37 @@
                         <button id="run-button" class="btn btn-primary w-100">Run Simulation</button>
                     </div>
                 </div>
+
+                <hr class="my-4">
+                <h3>Map & ODD Controls</h3>
+                <div class="card mt-3">
+                    <div class="card-body">
+                        <div class="mb-3">
+                            <label for="weather" class="form-label">Weather Conditions:</label>
+                            <select id="weather" class="form-select">
+                                <option value="Clear">Clear</option>
+                                <option value="Rain">Rain</option>
+                                <option value="Snow">Snow</option>
+                                <option value="Fog">Fog</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <p>Vehicle Speed: <span id="speed-display" class="fw-bold">Normal</span></p>
+                        </div>
+                        <div class="mb-3 d-flex justify-content-around">
+                            <button id="add-person-btn" class="btn btn-secondary">Add Person</button>
+                            <button id="add-car-btn" class="btn btn-secondary">Add Car</button>
+                        </div>
+                        <div class="mb-3">
+                            <button id="export-odd-btn" class="btn btn-info w-100">Export ODD (YAML)</button>
+                        </div>
+
+                        <h5 class="card-title mt-3 mb-2 px-3">Simulation Map (50x50px grid)</h5>
+                        <div id="map" class="map-grid border border-secondary rounded overflow-hidden p-0">
+                            <div id="vehicle" class="map-object vehicle" draggable="true" style="left: 0px; top: 0px;"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!-- Output -->
@@ -46,7 +78,7 @@
                 </div>
                 
                 <h3>Visualization</h3>
-                <div id="plot-container" class="bg-light rounded">
+                <div id="plot-container" class="bg-light rounded text-center">
                     <div id="plot"></div>
                 </div>
             </div>
