--- a/index.html
+++ b/index.html
@@ -68,6 +68,65 @@
                         </div>
                     </div>
                 </div>
+
+                <hr class="my-4">
+                <h3>Obstacle Avoidance Algorithms</h3>
+
+                <!-- I. Classical Geometric and Field-Based Methods (Legacy Methods) -->
+                <div class="card mt-3">
+                    <div class="card-header">Classical Geometric and Field-Based Methods</div>
+                    <div class="card-body">
+                        <div class="d-grid gap-2">
+                            <button class="btn btn-outline-secondary btn-sm" data-category="classical" data-algorithm="APF">Artificial Potential Field (APF)</button>
+                            <button class="btn btn-outline-secondary btn-sm" data-category="classical" data-algorithm="BugAlgorithms">Bug Algorithms (General)</button>
+                            <button class="btn btn-outline-secondary btn-sm" data-category="classical" data-algorithm="TangentBug">TangentBug</button>
+                            <button class="btn btn-outline-secondary btn-sm" data-category="classical" data-algorithm="CBUG">CBUG</button>
+                            <button class="btn btn-outline-secondary btn-sm" data-category="classical" data-algorithm="VFF">Virtual Force Field (VFF)</button>
+                            <button class="btn btn-outline-secondary btn-sm" data-category="classical" data-algorithm="VFH">Vector Field Histogram (VFH)</button>
+                            <button class="btn btn-outline-secondary btn-sm" data-category="classical" data-algorithm="DWA">Dynamic Window Approach (DWA)</button>
+                            <button class="btn btn-outline-secondary btn-sm" data-category="classical" data-algorithm="CVM">Curvature Velocity Method (CVM)</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- II. Reinforcement and Deep Learning-Based Methods (RL/DL/DRL) -->
+                <div class="card mt-3">
+                    <div class="card-header">Reinforcement and Deep Learning-Based Methods</div>
+                    <div class="card-body">
+                        <div class="d-grid gap-2">
+                            <button class="btn btn-outline-secondary btn-sm" data-category="rldl" data-algorithm="DRL">Deep Reinforcement Learning (DRL) (General)</button>
+                            <button class="btn btn-outline-secondary btn-sm" data-category="rldl" data-algorithm="FERO">FERO (Efficient Edge DRL)</button>
+                            <button class="btn btn-outline-secondary btn-sm" data-category="rldl" data-algorithm="D3QN">Dueling Double Deep Q-Network (D3QN)</button>
+                            <button class="btn btn-outline-secondary btn-sm" data-category="rldl" data-algorithm="PPO">Proximal Policy Optimization (PPO)</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- III. Search, Sampling, and Meta-Heuristic Methods -->
+                <div class="card mt-3">
+                    <div class="card-header">Search, Sampling, and Meta-Heuristic Methods</div>
+                    <div class="card-body">
+                        <div class="d-grid gap-2">
+                            <button class="btn btn-outline-secondary btn-sm" data-category="search" data-algorithm="PRM">Probabilistic Roadmap (PRM)</button>
+                            <button class="btn btn-outline-secondary btn-sm" data-category="search" data-algorithm="RRT">Rapidly-Exploring Random Tree (RRT)</button>
+                            <button class="btn btn-outline-secondary btn-sm" data-category="search" data-algorithm="ACO">Ant Colony Optimization (ACO)</button>
+                            <button class="btn btn-outline-secondary btn-sm" data-category="search" data-algorithm="GA">Genetic Algorithms (GA)</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- IV. Special Purpose Systems and Modern Architectural Approaches -->
+                <div class="card mt-3">
+                    <div class="card-header">Special Purpose Systems and Modern Architectural Approaches</div>
+                    <div class="card-body">
+                        <div class="d-grid gap-2">
+                            <button class="btn btn-outline-secondary btn-sm" data-category="special" data-algorithm="CoDAC">CoDAC (IVO-DWA Integrated)</button>
+                            <button class="btn btn-outline-secondary btn-sm" data-category="special" data-algorithm="PRMB">Plastic Recurrent Mushroom Body (PRMB)</button>
+                            <button class="btn btn-outline-secondary btn-sm" data-category="special" data-algorithm="FuzzyLogic">Fuzzy Logic Controller (Agriculture)</button>
+                            <button class="btn btn-outline-secondary btn-sm" data-category="special" data-algorithm="MLClassifiers">Multiple ML Classifiers (Voting Classifier)</button>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!-- Output -->
