--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
                             <p>Vehicle Speed: <span id="speed-display" class="fw-bold">Normal</span></p>
                         </div>
                         <div class="mb-3 d-flex justify-content-around">
-                            <button id="add-person-btn" class="btn btn-secondary">Add Person</button>
-                            <button id="add-car-btn" class="btn btn-secondary">Add Car</button>
+                            <button id="add-obstacle-btn" class="btn btn-secondary">Add Obstacle</button>
+                            <button id="add-vehicle-btn" class="btn btn-secondary">Add Vehicle</button>
+                        </div>
+                        <div class="mb-3 d-flex justify-content-around">
+                            <button id="change-map-btn" class="btn btn-secondary">Change Map (Random Walls)</button>
+                            <button id="random-obstacles-btn" class="btn btn-secondary">Add Random Obstacles</button>
                         </div>
                         <div class="mb-3">
                             <button id="export-odd-btn" class="btn btn-info w-100">Export ODD (YAML)</button>
