--- a/index.html
+++ b/index.html
@@ -146,6 +146,16 @@
                 </div>
             </div>
         </div>
+
+        <div class="row mt-4">
+            <div class="col-12">
+                <h3>Operational Design Domain (ODD) Visualization</h3>
+                <div id="odd-visualization-container" class="bg-light p-3 rounded">
+                    <!-- ODD visualization will be displayed here -->
+                    <pre id="odd-display" class="bg-light p-2 rounded">ODD data will be loaded and visualized here after Pyodide initialization.</pre>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="text-center mt-4 py-3 bg-light">
